[gd_scene load_steps=3 format=3 uid="uid://detlppnjsunki"]

[ext_resource type="Script" path="res://source/ui/menu_level/lobby.gd" id="1_gnwdt"]
[ext_resource type="PackedScene" uid="uid://bh5nm27pwk6gh" path="res://source/ui/menu_level/lobby_player.tscn" id="1_u2drq"]

[node name="Lobby" type="CenterContainer"]
custom_minimum_size = Vector2(1280, 720)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gnwdt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="Player1" parent="VBoxContainer/GridContainer" instance=ExtResource("1_u2drq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Player2" parent="VBoxContainer/GridContainer" instance=ExtResource("1_u2drq")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
_player_number = 2

[node name="Player3" parent="VBoxContainer/GridContainer" instance=ExtResource("1_u2drq")]
unique_name_in_owner = true
layout_mode = 2
_player_number = 3

[node name="Player4" parent="VBoxContainer/GridContainer" instance=ExtResource("1_u2drq")]
unique_name_in_owner = true
layout_mode = 2
_player_number = 4

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(250, 32)
layout_mode = 2
disabled = true
text = "Start Game"

[node name="DisconnectButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 32)
layout_mode = 2
text = "Disconnect"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/DisconnectButton" to="." method="_on_disconnect_button_pressed"]
